# midscene-agent

./: .env  .env.example  .gitignore  .mcp.json  CLAUDE.md  FINAL_WORK_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  LINT_FIX_SUMMARY.md  PARAM_FIX_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  TOOL_FIX_SUMMARY.md  TYPES_FIX_SUMMARY.md  UV_QUICK_START.md  WORK_SESSION_SUMMARY.md  __init__.py  analysis_orchestrator_implementation.md  analysis_plan.md  format.py  implementation_plan.md  improvement_plan.md  langgraph_dev.md  migrate_to_uv.sh  package-lock.json  pyproject.toml  requirements.txt  run.py  run_test.py  setup.py  setup.sh  start.sh  test.py  testVisionModel.http  test_all_apis.py  test_comprehensive_improvements.py  test_deduplication_memory.py  test_direct_call.py  test_http_client.py  test_mcp_connection.py  test_memory_saver.py  (+4 more)
.claude/: PROJECT_CONTEXT.md  settings.json  settings.local.json
agent/: __init__.py  run.py
converter/: README.md  __init__.py  cli.py  exceptions.py  models.py  requirements.txt  text_generator.py  utils.py  xmind_parser.py
docs/: ALL_APIS_GUIDE.md  API_IMPLEMENTATION_STATUS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  Midscene API 完整实现计划.md  Midscene Agent 工具集合分析报告.md  Midscene 官方文档 API 完整实施计划.md  PROJECT_STRUCTURE.md  UPGRADE_GUIDE.md  UV_MIGRATION_COMPLETE.md  UV_MIGRATION_PLAN.md  graph_extraction_plan.md  templates.md
examples/: __init__.py  ai_action_demo.py  basic_usage.py  search_results_demo.py  test_ecommerce.py
graph/: README.md  __init__.py  cli_adapter.py  langgraph.json  langgraph_adapter.py  langgraph_cli.py  requirements.txt
runner/: __init__.py  check_config.py  format.py  langgraph.json  run.py  (+3 more)
(+125 files in other folders)
